# socketchat

./: .gitignore  CMakeLists.txt  README.md
app/TestClient/: TestClient.cpp  TestSharedMemory.cpp  TestSharedMemory.h
app/TestServer/: TestServer.cpp
ext/: readme.md
ext/socketchat/: MemoryMap.cpp  MemoryMap.h  SPSC.h  SimpleBuffer.cpp  SimpleBuffer.h  Timer.h  get.bat  socketchat.cpp  socketchat.h  socketsharedmemory.cpp  socketsharedmemory.h  wplatform.cpp  wplatform.h  wsocket.cpp  wsocket.h
include/: InputLine.h  readme.md
src/: InputLine.cpp
